--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -15,3 +15,15 @@
 
 - [pdf](http://www.jneurosci.org/content/25/26/6235.full.pdf+html)
 - [研究室での櫻井くんの発表資料](https://drive.google.com/file/d/0B-OHcMrFyg1zaXBTMmpiNDBXSmM/view?usp=sharing)
+
+## 1. どんなもの？
+
+## 2. 先行研究と比べて何がすごい？
+
+## 3. 技術や手法のキモはどこ？
+
+## 4. どうやって有効だと検証した？
+
+## 5. 議論はある？
+
+## 6. 次に読むべき論文は？
