--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -1,29 +1,13 @@
-# Dopamine Cells Respond to Predicted Events during Classical Conditioning: Evidence for Eligibility Traces in the Reward-Learning Network
-
-```
-@article{pan2005dopamine,
-  title={Dopamine cells respond to predicted events during classical conditioning: evidence for eligibility traces in the reward-learning network},
-  author={Pan, Wei-Xing and Schmidt, Robert and Wickens, Jeffery R and Hyland, Brian I},
-  journal={The Journal of neuroscience},
-  volume={25},
-  number={26},
-  pages={6235--6242},
-  year={2005},
-  publisher={Soc Neuroscience}
-}
-```
-
-- [pdf](http://www.jneurosci.org/content/25/26/6235.full.pdf+html)
-- [研究室での櫻井くんの発表資料](https://drive.google.com/file/d/0B-OHcMrFyg1zaXBTMmpiNDBXSmM/view?usp=sharing)
+# Dopamine cells respond to predicted events during classical conditioning: evidence for eligibility traces in the reward-learning network
+- author: Pan, Wei-Xing and Schmidt, Robert and Wickens, Jeffery R and Hyland, Brian I
+- year: 2005
+- citation: 264 (2016年5月23日 時点)
+- [html](http://www.jneurosci.org/content/25/26/6235.long)
+- [研究室での櫻井くんの発表資料(自分用）](https://drive.google.com/file/d/0B-OHcMrFyg1zaXBTMmpiNDBXSmM/view?usp=sharing)
 
 ## 1. どんなもの？
-
 ## 2. 先行研究と比べて何がすごい？
-
 ## 3. 技術や手法のキモはどこ？
-
 ## 4. どうやって有効だと検証した？
-
 ## 5. 議論はある？
-
 ## 6. 次に読むべき論文は？
