--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -6,8 +6,24 @@
 - [研究室での櫻井くんの発表資料(自分用）](https://drive.google.com/file/d/0B-OHcMrFyg1zaXBTMmpiNDBXSmM/view?usp=sharing)
 
 ## 1. どんなもの？
+- Midbrain dopamine (DA) cellのモデルをTD(λ)でたてた。
+
 ## 2. 先行研究と比べて何がすごい？
+- Schultz+1997では、DA cellの働きをTD(0)で説明した。
+- TD(λ)の方がよりDA cellのモデルとして相応しそうだということを示した。
+  - しかもλは結構大きい
+
 ## 3. 技術や手法のキモはどこ？
 ## 4. どうやって有効だと検証した？
 ## 5. 議論はある？
 ## 6. 次に読むべき論文は？
+
+##### Schultz, 1998
+> Midbrain dopamine (DA) cells play a central role in rewardmediated learning in animals, and their activity follows classical learning rules (Schultz, 1998, 2002; Waelti et al., 2001) 
+
+> A TD mechanism that has been suggested to underlay this process involves a stepwise shift in the timing of prediction error signal, so that it drifts gradually in latency until it follows the cue (Montague et al., 1996; Schultz et al., 1997).
+
+##### Schultz et al., 1997
+> Furthermore, several features of DA cell activity match properties of the prediction error signal of the temporal difference (TD) algorithm for machine learning, leading to the hypothesis that DA cell activity may be providing a teaching signal within a neural analog of a TD learning system in the brain (Houk et al., 1995; Montague et al., 1996; Schultz et al., 1997; Daw et al., 2003; Nakahara et al., 2004). 
+
+
