--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -7,14 +7,50 @@
 
 ## 1. どんなもの？
 - Midbrain dopamine (DA) cellのモデルをTD(λ)でたてた。
+- パラメータはλが大きく、学習率が小さいものがフィットすることを確認した。
 
 ## 2. 先行研究と比べて何がすごい？
-- Schultz+1997では、DA cellの働きをTD(0)で説明した。
+- Schultz et al. (1997)では、DA cellの働きをTD(0)で説明した。
+- 既存のTD学習によるモデルの問題点（この論文の主張と異なる点）:
+  - 既存のモデルは、rewardに対するresponseが失われてから、段々キューのタイミングに近づいてい(Montague et al., 1996, Schultz et al., 1997)
+    - が、実際の観測では、キューに対する反応が確認されても（少なくとも初期は）rewardに対するresponseは失われていない
+  - intermediate redundant cue（二つ目の余分なcue）は学習の過程では予測に考慮されていない(Montague et al., 1996, Schultz et al., 1997)
 - TD(λ)の方がよりDA cellのモデルとして相応しそうだということを示した。
   - しかもλは結構大きい
+  - このモデルでは、rewardに対する反応は（学習初期では）失われていない
 
 ## 3. 技術や手法のキモはどこ？
+
+
+
 ## 4. どうやって有効だと検証した？
+### わからないもの
+- sessionってなんだ？
+- random rewardってなんだ？
+- どれくらいで学習するの？
+- Fig3のニューロンはFig2で学習されてるものと一緒なの？one-cue?2-cue?
+
+### Fig2.
+- TD(0)のモデルの結果と違い、すぐにcueに対する反応が観測された（one-cue, two-cue 双方で）
+  - [主張] 既存のモデルはおかしいのでは？
+- また、TD(0)のモデルの結果と違い、cueに対する反応が学習された後でも、rewardに対する反応が残っている
+  - => 詳しくみるためにFig.3へ
+
+### Fig.3
+- early training (A)とlate training (B)の比較
+- late trainingではrewardに対して反応しなくなっている（B, middle）
+  - が、cueがなかったりsecond-cueがなかったりすると反応する（B, left, right）
+  - [主張] conditioned responses to cuesが直接rewardに対する反応をなくしているわけではない
+  - [主張] 学習が進んで、きちんとcueが出れば、rewardに対する反応はやはりなくなる
+- earlyでもlateでも、2nd-cueが除かれた時のrewardに対する反応の大きさは、randam-rewardの時と変わらない
+  - [主張]1つめのcueの存在が2つめのcueの学習を妨げることはない（2つめのcueもきっちり予測で考慮されている）
+  - この主張は先行研究と異なる
+- 明瞭ではないが、2nd-cueが除かれた時にも負の反応が観測された（いくつかのニューロンで）
+  - （これも説明できるようなモデルを立てる）
+
+### Fig.4
+
+
 ## 5. 議論はある？
 ## 6. 次に読むべき論文は？
 
