--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -17,20 +17,18 @@
   - intermediate redundant cue（二つ目の余分なcue）は学習の過程では予測に考慮されていない(Montague et al., 1996, Schultz et al., 1997)
 - TD(λ)の方がよりDA cellのモデルとして相応しそうだということを示した。
   - しかもλは結構大きい
-  - このモデルでは、rewardに対する反応は（学習初期では）失われていない
 
 ## 3. 技術や手法のキモはどこ？
-
-
-
 ## 4. どうやって有効だと検証した？
+
 ### わからないもの
 - sessionってなんだ？
 - random rewardってなんだ？
 - どれくらいで学習するの？
 - Fig3のニューロンはFig2で学習されてるものと一緒なの？one-cue?2-cue?
+- そもそものTD学習の理解とか
 
-### Fig2.
+### Fig.3
 - TD(0)のモデルの結果と違い、すぐにcueに対する反応が観測された（one-cue, two-cue 双方で）
   - [主張] 既存のモデルはおかしいのでは？
 - また、TD(0)のモデルの結果と違い、cueに対する反応が学習された後でも、rewardに対する反応が残っている
@@ -49,7 +47,8 @@
   - （これも説明できるようなモデルを立てる）
 
 ### Fig.4
-
+- λ=0.9の時は、1st-cue, 2nd-cue, rewardのそれぞれの時刻で段々と反応が学習されていく（Fig.3の結果・主張と合致）
+  - λ=0の時は違う
 
 ## 5. 議論はある？
 ## 6. 次に読むべき論文は？
