--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -31,6 +31,8 @@
 ### Fig.2
 - TD(0)のモデルの結果と違い、すぐにcueに対する反応が観測された（one-cue, two-cue 双方で）
   - [主張] 既存のモデルはおかしいのでは？
+- 2つのcue双方に対して反応が見られた
+  - [主張] 先行研究のモデルが正しければ二つ目のcueは反応しないはずでは？
 - また、TD(0)のモデルの結果と違い、cueに対する反応が学習された後でも、rewardに対する反応が残っている
   - => 詳しくみるためにFig.3へ
 
