--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -6,7 +6,8 @@
 - [研究室での櫻井くんの発表資料(自分用）](https://drive.google.com/file/d/0B-OHcMrFyg1zaXBTMmpiNDBXSmM/view?usp=sharing)
 
 ## 1. どんなもの？
-- Midbrain dopamine (DA) cellのモデルをTD(λ)でたてた。
+- ラットの電気生理実験から、Schultz et al., 1997のモデルTD(0)がDA cellのモデルとして合致しない点があることを示した。 
+- DA cellのモデルをTD(0)ではなく、TD(λ)でたてた。先の電気生理実験の結果を再現することを確認した。
 - パラメータはλが大きく、学習率が小さいものがフィットすることを確認した。
 
 ## 2. 先行研究と比べて何がすごい？
@@ -19,6 +20,10 @@
   - しかもλは結構大きい
 
 ## 3. 技術や手法のキモはどこ？
+- 電気生理実験によって、先行研究のモデルでは説明できない現象を観測した:
+  - rewardに対する反応が失われてからキューに対する反応が獲得される（徐々にシフトしていく）
+  - redundant cueが予測に寄与しない
+
 ## 4. どうやって有効だと検証した？
 
 ### わからないもの
@@ -38,10 +43,8 @@
 
 ### Fig.3
 - early training (A)とlate training (B)の比較
-- late trainingではrewardに対して反応しなくなっている（B, middle）
-  - が、cueがなかったりsecond-cueがなかったりすると反応する（B, left, right）
-  - [主張] conditioned responses to cuesが直接rewardに対する反応をなくしているわけではない
-  - [主張] 学習が進んで、きちんとcueが出れば、rewardに対する反応はやはりなくなる
+- late trainingではrewardに対して反応しなくなっている（B, middle）が、cueがなかったりsecond-cueがなかったりすると反応する（B, left, right）
+  - [主張] 学習が進んで、cueに対するが出るようになってから、rewardに対する反応がなくなる。
 - earlyでもlateでも、2nd-cueが除かれた時のrewardに対する反応の大きさは、randam-rewardの時と変わらない
   - [主張]1つめのcueの存在が2つめのcueの学習を妨げることはない（2つめのcueもきっちり予測で考慮されている）
   - この主張は先行研究と異なる
