--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -44,7 +44,7 @@
 ### Fig.3
 - early training (A)とlate training (B)の比較
 - late trainingではrewardに対して反応しなくなっている（B, middle）が、cueがなかったりsecond-cueがなかったりすると反応する（B, left, right）
-  - [主張] 学習が進んで、cueに対するが出るようになってから、rewardに対する反応がなくなる。
+  - [主張] 学習が進んで、cueに対する反応が出るようになってから、rewardに対する反応がなくなる。
 - earlyでもlateでも、2nd-cueが除かれた時のrewardに対する反応の大きさは、randam-rewardの時と変わらない
   - [主張]1つめのcueの存在が2つめのcueの学習を妨げることはない（2つめのcueもきっちり予測で考慮されている）
   - この主張は先行研究と異なる
