--- a/Reinforcement Learning/Pan+2005.md
+++ b/Reinforcement Learning/Pan+2005.md
@@ -56,6 +56,8 @@
   - λ=0の時は違う
 
 ## 5. 議論はある？
+- Schultz et al., 1997にも言えることだが、そもそもCSから何ステップ後か、という特徴量について線形な価値関数というのは適切なの？
+
 ## 6. 次に読むべき論文は？
 
 ##### Schultz, 1998
